# rust-microservice-starter-kit

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migration/src/: lib.rs  m20240828_134140_create_feature_flag_table.rs  m20240828_140244_seed_feature_flag_with_sample_data.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: routes.rs
src/api/handlers/: feature_flags.rs  health_check.rs  mod.rs
src/db/: mod.rs
src/models/: feature_flag.rs  feature_flags.rs  mod.rs  prelude.rs
src/services/: feature_flag_service.rs  feature_flag_services.rs  mod.rs
tests/: api_tests.rs
tests/common/: feature_flag_mock.rs  mod.rs
