[package]
name = "rust_microservice_starter_kit"
version = "0.1.0"
edition = "2021"
authors = ["benborla@icloud.com"]
description = "A high-performance, type-safe Microservice built with Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/benborla/ensign-api"
documentation = "https://docs.rs/ensign_api"
homepage = "https://github.com/benborla/ensign-api"
keywords = ["microservice", "rust", "web", "api", "open-source"]
categories = ["web-programming", "development-tools"]

default-run = "rust_microservice_starter_kit"

[[bin]]
name = "rust_microservice_starter_kit"
path = "src/main.rs"

[lib]
name = "rust_microservice_starter_kit"
path = "src/lib.rs"

[dependencies]
axum = "0.7.5"
tower-http = { version = "0.5.0", features = ["trace"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
dotenv = "0.15.0"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print" ] }
axum-macros = "0.4.1"

[dev-dependencies]
tokio-test = "0.4"
